# metron

./: .gitattributes  .gitignore  .travis.sh  .travis.yml  CONTRIBUTING.md  DISCLAIMER  KEYS  LICENSE  NOTICE  README.md  Upgrade_steps.md  Upgrading.md  checkstyle.xml  dependencies_with_url.csv  feed.xml  index.html  meta.md  metron_checkstyle.xml  notices_dumper.py  pom.xml  pop_npm_cache.sh  push_npm_cache.sh
.github/: PULL_REQUEST_TEMPLATE.md
about/: index.html
asf/: index.html
bro-plugin-kafka/: CMakeLists.txt  MAINTAINER  Makefile  README  README.md  configure  configure.plugin
bro-plugin-kafka/cmake/: FindLibRDKafka.cmake
bro-plugin-kafka/scripts/: __load__.bro  init.bro
bro-plugin-kafka/scripts/Bro/Kafka/: logs-to-kafka.bro
bro-plugin-kafka/scripts/Metron/Kafka/: __load__.bro  logs-to-kafka.bro
bro-plugin-kafka/src/: KafkaWriter.cc  KafkaWriter.h  MetronJSON.cc  MetronJSON.h  Plugin.cc  Plugin.h  TaggedJSON.h  kafka.bif
bro-plugin-kafka/tests/: btest.cfg
bro-plugin-kafka/tests/Scripts/: get-bro-env
bro-plugin-kafka/tests/kafka/: show-plugin.bro
build_utils/: README.md  create_bundled_licenses.sh  list_dependencies.sh  verify_license.py  verify_licenses.sh
bundles-lib/: README.md  Usage_Sample.md  pom.xml
bundles-maven-plugin/: NOTICE  README.md  pom.xml
bundles-testing/: README.md  pom.xml
community/: index.html
css/: screen.css  screen.css.map
deployment/: .gitignore  README.md  ambari_config.yml  ambari_install.yml  ansible.cfg
develop/: bylaws.html  coding.html  index.html
docs/: arch.html  hive-ddl.html  index.html  indexes.html  sensor.html  vizandalerts.html
documentation/: index.html
downloads/: index.html
help/: index.html
js/: angular.min.js
metron-analytics/: README.md  pom.xml
metron-bundles/: pom.xml
metron-contrib/: pom.xml
metron-deployment/: .gitignore  Kerberos-ambari-setup.md  Kerberos-manual-setup.md  README.md  ansible.cfg  pom.xml
metron-docker/: .env  .gitignore  README.md  docker-compose.yml  install-metron.sh  pom.xml
metron-extensions/: README.md  pom.xml
metron-interface/: README.md  flow_diagrams.pptx  pom.xml
(+7261 files in other folders)
